Run embedded tests with new config